add all minor changes

--- a/docs/_posts/2018-05-05-Lahboul.md
+++ b/docs/_posts/2018-05-05-Lahboul.md
@@ -19,8 +19,8 @@ And on those who do not play their game
 Their world becoming jarringly chaotic
 
 But don’t denigrate these mammals  
-For, in the face of the unknown, failing to be cool  
-For, we are all animals  
+For in the face of the unknown, failing to be cool  
+For we are all animals  
 In our own versions, of Lahboul
 
 *I walked by a beautiful park near every day when I studied abroad in Meknes, Morocco. Supposedly, there was a zoo somewhere tucked away in the* 
