--- a/docs/_posts/2020-09-23-down-time.md
+++ b/docs/_posts/2020-09-23-down-time.md
@@ -22,7 +22,7 @@ Separated from the exhausting stimulation
 
 It rocks my head  
 At times filling it with dread  
-Instead of giving I simply keep on  
+Instead of giving up I simply keep on  
 I keep on going  
 I write I stay free  
 From the stimulation
